# grid-vs-random-vs-bayesian-search

./: README.md  pyproject.toml  rf_classification_all_models.csv  rf_classification_best_models.csv  xgb_classification_all_models.csv  xgb_classification_best_models.csv
src/: datalists.py  dataset.py  hyperparameters.py  train.py  tuning.py  utils.py
