[tool.poetry]
name = "grid-vs-random-vs-bayesian-search"
version = "0.1.0"
description = ""
authors = ["Sharad Shriyan <sharad30.ss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openml = "^0.12.2"
pydantic = "^1.10.2"
xgboost = "^1.6.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
